Support find for module