@@ -7,7 +7,6 @@ import static seedu.address.logic.parser.CliSyntax.PREFIX_NAME;
 import static seedu.address.logic.parser.CliSyntax.PREFIX_TAG;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
@@ -19,7 +18,6 @@ import seedu.address.model.person.ModuleContainsKeywordsPredicate;
 import seedu.address.model.person.NameContainsKeywordsPredicate;
 import seedu.address.model.person.Person;
 import seedu.address.model.person.TagContainsKeywordsPredicate;
-
 
 /**
  * Parses input arguments and creates a new FindCommand object
@@ -33,36 +31,49 @@ public class FindCommandParser implements Parser<FindCommand> {
      */
     public FindCommand parse(String args) throws ParseException {
         ArgumentMultimap argMultimap =
-                ArgumentTokenizer.tokenize(args, PREFIX_NAME, PREFIX_TAG, PREFIX_FACULTY);
+                ArgumentTokenizer.tokenize(args, PREFIX_NAME, PREFIX_TAG, PREFIX_FACULTY, PREFIX_MODULE);
 
-        if (!isAnyPrefixPresent(argMultimap, PREFIX_NAME, PREFIX_TAG, PREFIX_FACULTY)
+        if (!isAnyPrefixPresent(argMultimap, PREFIX_NAME, PREFIX_TAG, PREFIX_FACULTY, PREFIX_MODULE)
                 || !argMultimap.getPreamble().isEmpty()) {
             throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
         }
 
-        argMultimap.verifyNoDuplicatePrefixesFor(PREFIX_NAME, PREFIX_TAG, PREFIX_FACULTY);
+        // Throws ParseException if prefixes are repeated e.g. n/Alice n/Bob
+        argMultimap.verifyNoDuplicatePrefixesFor(PREFIX_NAME, PREFIX_TAG, PREFIX_FACULTY, PREFIX_MODULE);
 
         List<Predicate<Person>> predicates = new ArrayList<>();
 
         if (argMultimap.getValue(PREFIX_NAME).isPresent()) {
-            String[] nameKeywords = argMultimap.getValue(PREFIX_NAME).get().split("\\s+");
-            predicates.add(new NameContainsKeywordsPredicate(Arrays.asList(nameKeywords)));
+            String nameKeywords = argMultimap.getValue(PREFIX_NAME).get();
+            if (nameKeywords.isEmpty()) {
+                throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+            }
+            predicates.add(new NameContainsKeywordsPredicate(List.of(nameKeywords.split("\\s+"))));
         }
         if (argMultimap.getValue(PREFIX_TAG).isPresent()) {
-            String[] tagKeywords = argMultimap.getValue(PREFIX_TAG).get().split("\\s+");
-            predicates.add(new TagContainsKeywordsPredicate(Arrays.asList(tagKeywords)));
+            String tagKeywords = argMultimap.getValue(PREFIX_TAG).get();
+            if (tagKeywords.isEmpty()) {
+                throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+            }
+            predicates.add(new TagContainsKeywordsPredicate(List.of(tagKeywords.split("\\s+"))));
         }
         if (argMultimap.getValue(PREFIX_FACULTY).isPresent()) {
-            String[] facultyKeywords = argMultimap.getValue(PREFIX_FACULTY).get().split("\\s+");
-            predicates.add(new FacultyContainsKeywordsPredicate(Arrays.asList(facultyKeywords)));
+            String facultyKeywords = argMultimap.getValue(PREFIX_FACULTY).get();
+            if (facultyKeywords.isEmpty()) {
+                throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+            }
+            predicates.add(new FacultyContainsKeywordsPredicate(List.of(facultyKeywords.split("\\s+"))));
         }
-
         if (argMultimap.getValue(PREFIX_MODULE).isPresent()) {
-            String[] moduleKeywords = argMultimap.getValue(PREFIX_MODULE).get().split("\\s+");
-            predicates.add(new ModuleContainsKeywordsPredicate(Arrays.asList(moduleKeywords)));
+            String moduleKeywords = argMultimap.getValue(PREFIX_MODULE).get();
+            if (moduleKeywords.isEmpty()) {
+                throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+            }
+            predicates.add(new ModuleContainsKeywordsPredicate(List.of(moduleKeywords.split("\\s+"))));
         }
 
-        Predicate<Person> combinedPredicate = predicates.stream().reduce(Predicate::and).orElse(p -> true);
+        // Combine all predicates with an 'AND' logic
+        Predicate<Person> combinedPredicate = predicates.stream().reduce(Predicate::and).orElse(x -> true);
 
         return new FindCommand(combinedPredicate);
     }
